# radicle-surf

./: .gitignore  .gitmodules  .license-header  .rustfmt.toml  CONTRIBUTING  CONTRIBUTING.md  COPYING  Cargo.toml  DCO  DEVELOPMENT.md  LICENSE  README.md  build.rs  default.nix  deny.toml  ops  root  shell.nix  version
.buildkite/: pipeline.yaml
.buildkite/docker/rust/: Dockerfile
.buildkite/docker/rust-nightly/: Dockerfile
.github/workflows/: ci.yaml
benches/: last_commit.rs
ci/: build-test  lint  run
ci/gh/: build-test
ci/nix/: run
data/: README.md  git-platinum.tgz  mock-branches.txt
data/git-test/: Cargo.toml
docs/: denotational-design.md
examples/: diff.rs
nix/: sources.json
scripts/: setup-branches.sh  submodule.sh  teardown-branches.sh  update-git-platinum.sh
source/: Cargo.toml
source/src/: branch.rs  commit.rs  lib.rs  revision.rs  tag.rs
source/src/object/: blob.rs
src/: diff.rs  file_system.rs  lib.rs  nonempty.rs  smallcheck.rs  traits.rs  tree.rs  types.rs  vcs.rs
src/diff/: git.rs  mod.rs
src/diff/git/: mod.rs
src/file_system/: directory.rs  error.rs  mod.rs  path.rs
src/file_system/path/: mod.rs  unsound.rs
src/vcs/: git.rs  mod.rs
src/vcs/git/: branch.rs  error.rs  ext.rs  namespace.rs  object.rs  reference.rs  repo.rs  tag.rs
src/vcs/git/reference/: glob.rs
surf/: Cargo.toml  README.md  build.rs
surf/benches/: last_commit.rs
surf/data/: README.md  git-platinum.tgz  mock-branches.txt
surf/examples/: diff.rs
surf/src/: diff.rs  lib.rs  tree.rs  vcs.rs
surf/src/diff/: git.rs
surf/src/file_system/: path.rs
surf/src/vcs/: git.rs
surf/src/vcs/git/: branch.rs  commit.rs  error.rs  reference.rs  repo.rs  tag.rs
surf/src/vcs/git/reference/: glob.rs
