[package]
name = "radicle-surf"
description = "A code surfing library for VCS file systems"
readme = "README.md"
version = "0.2.1"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
homepage = "https://github.com/radicle-dev/radicle-surf"
repository = "https://github.com/radicle-dev/radicle-surf"
license = "GPL-3.0-or-later"

[dependencies]
thiserror = "1.0"
nonempty = "0.5"

[dependencies.git2]
version = ">= 0.10"
default-features = false
features = []

[dev-dependencies]
pretty_assertions = "0.6"
proptest = "0.9"
criterion = "0.3"

[[bench]]
name = "last_commit"
harness = false
