[package]
name = "radicle-surf"
description = "A code surfing library for VCS file systems"
readme = "README.md"
version = "0.5.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
homepage = "https://github.com/radicle-dev/radicle-surf"
repository = "https://github.com/radicle-dev/radicle-surf"
license = "GPL-3.0-or-later"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
serialize = ["serde"]

[dependencies]
either = "1.5"
lazy_static = "1.4"
nonempty = "0.5"
regex = "1.3"
serde = { features = ["serde_derive"], optional = true, version = "1" }
thiserror = "1.0"

[dependencies.git2]
version = "0.13"
default-features = false
features = []

[dependencies.radicle-git-ext]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "1a7c3f48dc156c14166764b2e3f862b867cc2812"

[dependencies.radicle-macros]
git = "https://github.com/radicle-dev/radicle-link.git"
rev = "1a7c3f48dc156c14166764b2e3f862b867cc2812"

[dev-dependencies]
pretty_assertions = "0.6"
proptest = "0.9"
criterion = "0.3"
serde_json = "1"

[[bench]]
name = "last_commit"
harness = false
