[package]
name = "radicle-source"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4"
lazy_static = "1.4"
nonempty = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
syntect = "4.2"
thiserror = "1.0"

[dependencies.radicle-surf]
path = "../surf"
features = ["serialize"]
