[package]
name = "radicle-source"
description = "A high level API for browsing source files"
version = "0.1.0"
authors = ["The Radicle Team <dev@radicle.xyz>"]
edition = "2018"
homepage = "https://github.com/radicle-dev/radicle-surf"
repository = "https://github.com/radicle-dev/radicle-surf"
license = "GPL-3.0-or-later"

[features]
syntax = ["syntect"]

[dependencies]
log = "0.4"
lazy_static = "1.4"
nonempty = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
syntect = { version = "4.2", optional = true }
thiserror = "1.0"

[dependencies.git2]
version = ">= 0.12"
default-features = false
features = []

[dependencies.radicle-surf]
version = "^0.5.4"
features = ["serialize"]
